# GroundedAI

./: .gitignore  DIRECTORY_STRUCTURE.md  README.md  temp_audit.py
auto-grounder/: .env.example  .gitignore  README.md  __init__.py  pyproject.toml  requirements.txt
auto-grounder/app/: __init__.py  config.py  main.py  schemas.py
auto-grounder/app/api/: routes.py
auto-grounder/app/core/: __init__.py  corrective_prompt.py  grounding_loop.py
auto-grounder/app/services/: __init__.py  llm_client.py  truthguard_client.py
auto-grounder/tests/: __init__.py  test_app.py  test_corrective_prompt.py  test_grounding_loop.py
datasets/: sample_eval_dataset.json
prompt-shield/: .env.example  README.md  __init__.py  pyproject.toml  requirements.txt
prompt-shield/app/: __init__.py  config.py  main.py  schemas.py
prompt-shield/app/api/: routes.py
prompt-shield/app/core/: __init__.py  injection_detector.py  pii_detector.py  pii_scrubber.py  toxicity_filter.py
prompt-shield/app/services/: __init__.py  llm_proxy.py
prompt-shield/app/utils/: __init__.py
prompt-shield/tests/: __init__.py  test_app.py  test_injection_detector.py  test_pii_detector.py  test_pii_scrubber.py  test_toxicity_filter.py
reports/: generated_evaluation_report.md
truthbench/: .env.example  .gitignore  README.md  __init__.py  config.py  metrics.py  pyproject.toml  reporter.py  requirements.txt  runner.py  schemas.py
truthbench/datasets/: README.md  dataset_schema.md  sample_eval_dataset.json
truthbench/evaluators/: __init__.py  citation_quality_evaluator.py  claim_accuracy_evaluator.py  hallucination_risk_evaluator.py  verdict_consistency_evaluator.py
truthbench/scripts/: __init__.py  generate_sample_report.py  run_truthbench.py
truthbench/tests/: __init__.py  test_evaluators.py  test_metrics.py  test_runner.py
truthguard-ai/: .env.example  .gitignore  README.md  pyproject.toml  requirements.txt
truthguard-ai/app/: __init__.py  config.py  main.py  schemas.py
truthguard-ai/app/api/: __init__.py  routes.py
truthguard-ai/app/core/: __init__.py  citation_checker.py  claim_evidence_aligner.py  claim_extractor.py  evidence_ranker.py  evidence_retriever.py  report_builder.py  verifier.py
truthguard-ai/app/services/: __init__.py  llm_client.py  scoring.py  search_client.py
truthguard-ai/app/utils/: __init__.py  text_utils.py
truthguard-ai/docs/: api_design.md  architecture.md  evaluation_plan.md  hallucination_reduction_strategy.md  roadmap.md
truthguard-ai/examples/: sample_input.json  sample_output.json
truthguard-ai/tests/: __init__.py  test_app.py  test_claim_extractor.py  test_report_builder.py  test_scoring.py  test_text_utils.py  test_verifier.py
