[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "truthbench"
version = "0.1.0"
description = "Evaluation and benchmarking toolkit for hallucination-reduction systems"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "TruthBench Team", email = "team@truthbench.example.com"}
]
requires-python = ">=3.11"
dependencies = [
    "pydantic>=2.6.0",
    "pydantic-settings>=2.1.0",
    "python-dotenv>=1.0.0",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.23.0",
    "httpx>=0.26.0",
    "ruff>=0.1.0",
    "black>=23.0.0",
    "mypy>=1.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "-v --tb=short"

[tool.ruff]
line-length = 100
target-version = "py311"
select = ["E", "F", "I", "UP", "W", "C90", "ANN", "ARG", "B", "C4", "DTZ", "E7", "EM", "EXE", "FUR", "ISC", "LOG", "N", "NPY", "PD", "PIE", "PL", "PTH", "PYI", "Q", "RSE", "RET", "SIM", "TCH", "TID", "TRY", "ERA", "ICN", "PT", "RUF", "PER", "PGH", "PLW", "T10"]
ignore = ["migrations"]

[tool.black]
line-length = 100
target-version = ["py311"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
strict_optional = true